dhall/tests/type-inference/failure/unit/MergeMissingHandler1.txt
Type error: error: MergeVariantMissingHandler
 --> <current file>:1:1
  |
1 | merge {=} <x>.x
  | ^^^^^^^^^^^^^^^ MergeVariantMissingHandler
  |
